--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,23 @@
 <h1 class="text-center text-3xl">SpeakApp</h1>
+<div class="bg-base100" data-theme="theme1">
+  <h1 class="text-2xl mx-4">Theme 1</h1>
+  <button class="btn btn-primary">Primary</button>
+  <button class="btn btn-secondary">Secondary</button>
+  <button class="btn btn-accent">Accent</button>
+  <button class="btn btn-neutral">Neutral</button>
+</div>
+<div class="bg-base100" data-theme="theme2">
+  <h1 class="text-2xl mx-4">Theme 2</h1>
+  <button class="btn btn-primary">Primary</button>
+  <button class="btn btn-secondary">Secondary</button>
+  <button class="btn btn-accent">Accent</button>
+  <button class="btn btn-neutral">Neutral</button>
+</div>
+<div class="bg-base100" data-theme="theme3">
+  <h1 class="text-2xl mx-4">Theme 3</h1>
+  <button class="btn btn-primary">Primary</button>
+  <button class="btn btn-secondary">Secondary</button>
+  <button class="btn btn-accent">Accent</button>
+  <button class="btn btn-neutral">Neutral</button>
+</div>
 <router-outlet></router-outlet>
