added geist font

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -20,4 +20,14 @@
   <button class="btn btn-accent">Accent</button>
   <button class="btn btn-neutral">Neutral</button>
 </div>
+<div>
+  <p class="font-thin">The quick brown fox jumps over the lazy dog.</p>
+  <p class="font-extralight">The quick brown fox jumps over the lazy dog.</p>
+  <p class="font-light">The quick brown fox jumps over the lazy dog.</p>
+  <p class="">The quick brown fox jumps over the lazy dog.</p>
+  <p class="font-medium">The quick brown fox jumps over the lazy dog.</p>
+  <p class="font-semibold">The quick brown fox jumps over the lazy dog.</p>
+  <p class="font-bold">The quick brown fox jumps over the lazy dog.</p>
+  <p class="font-extrabold">The quick brown fox jumps over the lazy dog.</p>
+  <p class="font-black">The quick brown fox jumps over the lazy dog.</p>
 <router-outlet></router-outlet>
