--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: geist;
+  src: url(assets/GeistVariableVF.ttf) format("truetype");
+}
+
+* {
+  font-family: geist;
+}
