--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <h1 class="text-center text-3xl">SpeakApp</h1>
 <div class="bg-base100" data-theme="theme1">
   <h1 class="text-2xl mx-4">Theme 1</h1>
