header template for desktop

--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -1,3 +1,38 @@
-<header>
-  SpeakApp
+<header class="navbar h-20 fixed bg-primary">
+  <!-- logo -->
+  <div class="navbar-start ml-16 w-100">
+    <h1 class="text-3xl my-auto font-bold">SpeakApp</h1>
+  </div>
+  <!-- center menu-->
+  <nav class="navbar-center flex flex-row justify-center gap-16 text-lg">
+    <div class="flex flex-row gap-2 transition duration-300 hover:scale-110">
+      <span class="material-symbols-outlined" style="font-size: 32px">
+        home
+      </span>
+      <a class="my-auto" routerLink="/home">Home</a>
+    </div>
+    <div class="flex flex-row gap-2 transition duration-300 hover:scale-110">
+      <span class="material-symbols-outlined" style="font-size: 32px">
+        chat
+      </span>
+      <a class="my-auto" routerLink="/chats">Chats</a>
+    </div>
+    <div class="flex flex-row gap-2 transition duration-300 hover:scale-110">
+      <span class="material-symbols-outlined" style="font-size: 32px">
+        search
+      </span>
+      <a class="my-auto" routerLink="/search">Search</a>
+    </div>
+  </nav>
+  <!-- user menu-->
+  <div class="navbar-end mr-16 w-100 gap-6">
+    <h2 class="text-lg font-semibold">Krzysio</h2>
+    <div class="avatar">
+      <div class="w-14 rounded-full">
+        <img
+          src="https://tapety.tja.pl/obrazki/tja_normalne/166120.jpg"
+        />
+      </div>
+    </div>
+  </div>
 </header>
