page layout and alert list

--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="navbar h-20 fixed bg-primary">
+<header class="top-0 left-0 navbar h-20 fixed bg-primary">
   <!-- logo -->
   <div class="navbar-start ml-16 w-100">
     <h1 class="text-3xl my-auto font-bold">SpeakApp</h1>
