--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,47 +1,7 @@
 <app-header></app-header>
-<h1 class="text-center text-3xl">SpeakApp</h1>
-<div class="bg-base100" data-theme="theme1">
-  <h1 class="text-2xl mx-4">Theme 1</h1>
-  <button class="btn btn-primary">Primary</button>
-  <button class="btn btn-secondary">Secondary</button>
-  <button class="btn btn-accent">Accent</button>
-  <button class="btn btn-neutral">Neutral</button>
-</div>
-<div class="bg-base100" data-theme="theme2">
-  <h1 class="text-2xl mx-4">Theme 2</h1>
-  <button class="btn btn-primary">Primary</button>
-  <button class="btn btn-secondary">Secondary</button>
-  <button class="btn btn-accent">Accent</button>
-  <button class="btn btn-neutral">Neutral</button>
-</div>
-<div class="bg-base100" data-theme="theme3">
-  <h1 class="text-2xl mx-4">Theme 3</h1>
-  <button class="btn btn-primary">Primary</button>
-  <button class="btn btn-secondary">Secondary</button>
-  <button class="btn btn-accent">Accent</button>
-  <button class="btn btn-neutral">Neutral</button>
-</div>
-<div>
-  <p class="font-thin">The quick brown fox jumps over the lazy dog.</p>
-  <p class="font-extralight">The quick brown fox jumps over the lazy dog.</p>
-  <p class="font-light">The quick brown fox jumps over the lazy dog.</p>
-  <p class="">The quick brown fox jumps over the lazy dog.</p>
-  <p class="font-medium">The quick brown fox jumps over the lazy dog.</p>
-  <p class="font-semibold">The quick brown fox jumps over the lazy dog.</p>
-  <p class="font-bold">The quick brown fox jumps over the lazy dog.</p>
-  <p class="font-extrabold">The quick brown fox jumps over the lazy dog.</p>
-  <p class="font-black">The quick brown fox jumps over the lazy dog.</p>
 
-  <button class="btn btn-primary" (click)="onShowAlert()">Primary</button>
-  <ul class="fixed top-6 right-0">
-  <li *ngFor="let alert of alerts()" [ngClass]="{
-      'relative alert duration-500 transition-all w-[16rem] ease-in-out -right-1/2 opacity-0 shadow shadow-black border-none mb-4': true,
-      'right-4 z-30 opacity-100': alert.isShown,
-      'bg-red-500': alert.type ===  'error',
-      'bg-green-500': alert.type ===  'success',
-      'bg-blue-500': alert.type ===  'info',
-      'bg-yellow-500': alert.type ===  'warning'
-    }" (click)="onRemoveAlert(alert)">
-    <div>{{alert.message}}</div>
-</ul>
+<app-alert-list></app-alert-list>
+
+<main class="mt-20 max-w-5xl mx-auto p-4">
 <router-outlet></router-outlet>
+</main>
