--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -5,8 +5,8 @@
   </div>
   <!-- center menu-->
   <nav
-    class="md:navbar-center md:static flex flex-row md:justify-center md:gap-16 md:w-auto
-           text-lg fixed left-0 bottom-0 bg-primary w-full h-20 m-0 justify-between px-4"
+    class="md:navbar-center md:static md:justify-center md:gap-16 md:w-auto
+           text-lg fixed left-0 bottom-0 bg-primary w-full h-20 m-0 justify-between px-4 flex flex-row "
   >
     <a
       class="flex flex-row gap-2 transition duration-300 min-w-[4rem] justify-center hover:scale-110"
