routerlinks in header

--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="top-0 left-0 navbar h-20 fixed bg-primary">
   <!-- logo -->
   <div class="navbar-start ml-4 w-100 lg:ml-16">
-    <h1 class="text-3xl my-auto font-bold">SpeakApp</h1>
+    <h1 class="text-3xl my-auto font-bold cursor-pointer select-none" routerLink="/">SpeakApp</h1>
   </div>
   <!-- center menu-->
   <nav
@@ -38,8 +38,8 @@
   </nav>
   <!-- user menu-->
   <div class="navbar-end mr-4 w-100 lg:mr-16">
-    <div class="flex flex-row gap-2 cursor-pointer sm:gap-6" routerLink="/profile">
-      <h2 class="text-lg font-semibold my-auto hidden min-[320px]:block">Krzysio</h2>
+    <div class="flex flex-row gap-2 cursor-pointer sm:gap-6" routerLink="profiles/xd">
+      <h2 class="text-lg font-semibold my-auto hidden min-[320px]:block select-none">Krzysio</h2>
       <div class="avatar">
         <div class="w-14 rounded-full">
           <img src="https://tapety.tja.pl/obrazki/tja_normalne/166120.jpg" />
