--- a/frontend/src/app/modules/profiles/components/user-profile-page/user-profile-page.component.html
+++ b/frontend/src/app/modules/profiles/components/user-profile-page/user-profile-page.component.html
@@ -13,9 +13,9 @@
     </div>
   </div>
   <div class="flex flex-row justify-between">
-    <div>
-      info posts friends saved
-    </div>
+    <nav class="mt-4 flex flex-row justify-start gap-4 text-lg text-primary">
+      <app-user-profile-navigation></app-user-profile-navigation>
+    </nav>
     <div>
       search posts
     </div>
