--- a/frontend/src/app/modules/profiles/components/user-profile-page/user-profile-page.component.html
+++ b/frontend/src/app/modules/profiles/components/user-profile-page/user-profile-page.component.html
@@ -10,7 +10,7 @@
       <div class="flex flex-col justify-end w-full">
         <div class="flex flex-row justify-between">
           <h1 class="text-3xl font-semibold">Krzysio Misio</h1>
-          <button class="flex flex-row gap-2 btn btn-primary rounded-full shadow-md shadow-black">
+          <button class="flex flex-row gap-2 app-btn btn-primary">
             <h2 class="">Settings</h2>
             <span class="material-symbols-outlined">settings</span>
           </button>
