app-input class

--- a/frontend/src/app/modules/profiles/components/user-profile-navigation/user-profile-navigation.component.html
+++ b/frontend/src/app/modules/profiles/components/user-profile-navigation/user-profile-navigation.component.html
@@ -1,6 +1,8 @@
-<nav class="flex flex-row gap-6">
- <app-user-profile-navigation-item label="Info" icon="info" route="info"></app-user-profile-navigation-item>
- <app-user-profile-navigation-item label="Posts" icon="post" route="posts"></app-user-profile-navigation-item>
- <app-user-profile-navigation-item label="Friends" icon="group" route="friends"></app-user-profile-navigation-item>
- <app-user-profile-navigation-item label="Saved" icon="bookmark" route="saved"></app-user-profile-navigation-item>
+<nav class="flex flex-row justify-start gap-4 text-lg text-primary">
+  <ul class="flex flex-row gap-6">
+   <app-user-profile-navigation-item label="Info" icon="info" route="info"></app-user-profile-navigation-item>
+   <app-user-profile-navigation-item label="Posts" icon="post" route="posts"></app-user-profile-navigation-item>
+   <app-user-profile-navigation-item label="Friends" icon="group" route="friends"></app-user-profile-navigation-item>
+   <app-user-profile-navigation-item label="Saved" icon="bookmark" route="saved"></app-user-profile-navigation-item>
+  </ul>
 </nav>
