--- a/frontend/src/app/modules/profiles/components/user-profile-page/user-profile-page.component.html
+++ b/frontend/src/app/modules/profiles/components/user-profile-page/user-profile-page.component.html
@@ -19,12 +19,8 @@
     </div>
   </div>
   <div class="flex flex-row justify-between mt-4">
-    <nav class="flex flex-row justify-start gap-4 text-lg text-primary">
-      <app-user-profile-navigation></app-user-profile-navigation>
-    </nav>
-    <div>
-      search posts
-    </div>
+    <app-user-profile-navigation></app-user-profile-navigation>
+    <app-profile-search-form></app-profile-search-form>
   </div>
 </div>
 <div>
