--- a/frontend/src/app/modules/profiles/components/user-profile-navigation-item/user-profile-navigation-item.component.html
+++ b/frontend/src/app/modules/profiles/components/user-profile-navigation-item/user-profile-navigation-item.component.html
@@ -1,4 +1,4 @@
-<a class="flex flex-row gap-1 transition hover:scale-110" [routerLink]="route">
+<li class="flex flex-row gap-1 transition hover:scale-110" [routerLink]="route">
   <span class="material-symbols-outlined">{{ icon }}</span>
   <span class="">{{ label }}</span>
-</a>
+</li>
