--- a/frontend/src/app/modules/profiles/components/user-profile-navigation/user-profile-navigation.component.html
+++ b/frontend/src/app/modules/profiles/components/user-profile-navigation/user-profile-navigation.component.html
@@ -1,4 +1,4 @@
-<nav class="flex flex-row justify-start gap-4 text-lg text-primary">
+<nav class="flex flex-row justify-start gap-4 text-lg text-primary my-auto">
   <ul class="flex flex-row gap-6">
    <app-user-profile-navigation-item label="Info" icon="info" route="info"></app-user-profile-navigation-item>
    <app-user-profile-navigation-item label="Posts" icon="post" route="posts"></app-user-profile-navigation-item>
