--- a/frontend/src/app/modules/profiles/components/user-profile-page/user-profile-page.component.html
+++ b/frontend/src/app/modules/profiles/components/user-profile-page/user-profile-page.component.html
@@ -23,6 +23,6 @@
     <app-profile-search-form></app-profile-search-form>
   </div>
 </div>
-<div>
-  <h1 class="text-xl font-semibold">Information about user</h1>
+<div class="mt-4">
+  <router-outlet></router-outlet>
 </div>
