--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="top-0 left-0 navbar h-20 fixed bg-primary">
+<header class="top-0 left-0 navbar h-20 fixed bg-primary z-40">
   <!-- logo -->
   <div class="navbar-start ml-4 w-100 lg:ml-16">
     <h1 class="text-3xl my-auto font-bold cursor-pointer select-none" routerLink="/">SpeakApp</h1>
