--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,6 +2,6 @@
 
 <app-alert-list></app-alert-list>
 
-<main class="mt-20 max-w-5xl mx-auto p-4">
+<main class="my-20 max-w-5xl mx-auto p-4">
 <router-outlet></router-outlet>
 </main>
