Finished ListPostComponent, but without tests

--- a/frontend/src/app/modules/posts/components/post-list/post-list/post-list.component.html
+++ b/frontend/src/app/modules/posts/components/post-list/post-list/post-list.component.html
@@ -1,1 +1,5 @@
-<p>post-list works!</p>
+<ul class="flex flex-col gap-4">
+  <li *ngFor="let post of posts">
+    <app-post [post]="post"></app-post>
+  </li>
+</ul>
