--- a/frontend/src/app/modules/profiles/components/user-profile-info/user-profile-info.component.html
+++ b/frontend/src/app/modules/profiles/components/user-profile-info/user-profile-info.component.html
@@ -1,13 +1,13 @@
-<div class="max-w-[800px] mx-auto">
+<div *ngIf="profile">
   <h1 class="text-primary text-xl font-semibold mb-3 mt-8">About Me</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam nulla porttitor massa id neque aliquam. Nunc faucibus a pellentesque sit amet porttitor. Urna condimentum mattis pellentesque id nibh. Pellentesque pulvinar pellentesque habitant morbi tristique senectus et netus. Nisl vel pretium lectus quam id leo in. Amet consectetur adipiscing elit pellentesque habitant morbi. Massa massa ultricies mi quis hendrerit. </p>
+  <p>{{ profile.about }}</p>
   <div class="flex flex-row justify-between mt-8">
     <ul>
-      <app-user-profile-info-label label="First Name" value="Krzysio"></app-user-profile-info-label>
-      <app-user-profile-info-label label="Last Name" value="Misio"></app-user-profile-info-label>
-      <app-user-profile-info-label label="Email" value="krzysio@misio.pl"></app-user-profile-info-label>
-      <app-user-profile-info-label label="Joined At" value="11.11.2023"></app-user-profile-info-label>
+      <app-user-profile-info-label label="First Name" [value]="profile.firstName"></app-user-profile-info-label>
+      <app-user-profile-info-label label="Last Name" [value]="profile.lastName"></app-user-profile-info-label>
+      <app-user-profile-info-label label="Email" [value]="profile.email"></app-user-profile-info-label>
+      <app-user-profile-info-label label="Joined At" [value]="profile.dateOfBirth.toString()"></app-user-profile-info-label>
     </ul>
-    <app-user-profile-info-birthday-card birthday="11.11.2023"></app-user-profile-info-birthday-card>
+    <app-user-profile-info-birthday-card [birthday]="profile.dateOfBirth.toString()"></app-user-profile-info-birthday-card>
   </div>
 </div>
