handling loading state + created shared module

--- a/frontend/src/app/modules/profiles/components/user-profile-info-page/user-profile-info-page.component.html
+++ b/frontend/src/app/modules/profiles/components/user-profile-info-page/user-profile-info-page.component.html
@@ -1,3 +1,3 @@
 <div class="max-w-[800px] mx-auto">
-  <app-user-profile-info [profile]="profile$ | async"></app-user-profile-info>
+  <app-user-profile-info [profile]="profile$ | async" [isLoading]="isLoading()"></app-user-profile-info>
 </div>
