--- a/frontend/src/app/modules/profiles/components/user-profile-page/user-profile-page.component.html
+++ b/frontend/src/app/modules/profiles/components/user-profile-page/user-profile-page.component.html
@@ -1,4 +1,4 @@
-<app-profile [profile]="profile$ | async"></app-profile>
+<app-profile [profile]="profile$ | async" [isLoading]="isLoading()"></app-profile>
 <div class="mt-4">
   <router-outlet></router-outlet>
 </div>
