--- a/frontend/src/app/modules/profiles/components/profile/profile.component.html
+++ b/frontend/src/app/modules/profiles/components/profile/profile.component.html
@@ -1,4 +1,5 @@
-<div *ngIf="profile">
+<app-loading-spinner [isLoading]="isLoading"></app-loading-spinner>
+<div *ngIf="profile && !isLoading">
   <div>
     <img class="absolute max-w-[calc(64rem-2rem)] z-0 w-[calc(100%-2rem)] h-[250px] rounded-[20px] object-cover" src="https://wallpaperaccess.com/full/1419752.jpg" alt="user background picture">
     <div class="flex flex-row pt-[125px] pl-10">
