--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -38,7 +38,7 @@
   </nav>
   <!-- user menu-->
   <div class="navbar-end mr-4 w-100 lg:mr-16">
-    <div class="flex flex-row gap-2 cursor-pointer sm:gap-6" [routerLink]="'profiles/' + authState.userId">
+    <div class="flex flex-row gap-2 cursor-pointer sm:gap-6" [routerLink]="['profiles/', authState.userId]">
       <h2 class="text-lg font-semibold my-auto hidden min-[320px]:block select-none">{{ authState.firstName }}</h2>
       <div class="avatar">
         <div class="w-14 rounded-full">
