Resolved most of the issues

--- a/frontend/src/app/modules/posts/components/add-post/add-post.component.html
+++ b/frontend/src/app/modules/posts/components/add-post/add-post.component.html
@@ -1,13 +1,11 @@
 <div class="card w-96">
-  <form #form="ngForm" (ngSubmit)="onFormSubmit()" class="space-y-6">
+  <form [formGroup]="myForm" (ngSubmit)="onFormSubmit()" class="space-y-6">
     <div>
       <div class="mt-2">
-        <textarea id="content" [(ngModel)]="model.content" #content="ngModel" minlength="1"  class="text-black w-full" placeholder="What's on your mind?" name="content" type="text"></textarea>
-
+        <textarea id="content" formControlName="content" class="text-black w-full" placeholder="What's on your mind?" name="content" type="text"></textarea>
       </div>
-
       <div>
-        <button class="btn btn-primary" style="float:right; border-radius: 25px">Post</button>
+        <button class="app-btn btn-primary" style="float:right; border-radius: 25px">Post</button>
       </div>
     </div>
   </form>
