Created Delete Modal Component

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,6 +3,7 @@
 <app-alert-list></app-alert-list>
 <main class="my-20 max-w-5xl mx-auto p-4">
   <app-add-post ></app-add-post>
+  <app-delete-post></app-delete-post>
 
   <router-outlet></router-outlet>
 </main>
