--- a/frontend/src/app/modules/posts/components/delete-post/delete-post.component.html
+++ b/frontend/src/app/modules/posts/components/delete-post/delete-post.component.html
@@ -1,1 +1,18 @@
-<p>delete-post works!</p>
+
+
+<span *ngIf="visible" class="material-symbols-outlined" onclick="my_modal_1.showModal()">delete</span>
+<dialog id="my_modal_1" class="modal">
+  <div class="modal-box">
+    <h1 class="font-bold text-lg text-center" style="font-size: 22px">Do you really want to delete your post?</h1>
+    <p class="py-4 text-center" style="color: #EEAF3A; font-size: 16px">The post data will be lost forever!</p>
+    <div class="modal-action justify-between">
+      <form method="dialog" class="form1">
+        <button class="btn">CANCEL</button>
+      </form>
+      <form (ngSubmit)="onFormSubmit()" class="form2">
+        <button class="btn btn-primary">DELETE</button>
+      </form>
+    </div>
+
+  </div>
+</dialog>
