--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,7 +2,8 @@
 
 <app-alert-list></app-alert-list>
 <main class="my-20 max-w-5xl mx-auto p-4">
-
+  <app-delete-post></app-delete-post>
+  <app-post-list></app-post-list>
 
   <router-outlet></router-outlet>
 </main>
