--- a/frontend/src/app/modules/posts/components/post/post/post.component.css
+++ b/frontend/src/app/modules/posts/components/post/post/post.component.css
@@ -2,7 +2,7 @@
   margin-left: auto;
   margin-right: auto;
   background-color: #D9D9D9;
-  padding: 15px;
+  padding: 5px 15px 10px;
 }
 
 figure {
