--- a/frontend/src/app/modules/posts/components/post/post/post.component.html
+++ b/frontend/src/app/modules/posts/components/post/post/post.component.html
@@ -12,7 +12,7 @@
         <p>{{formattedDate}}</p>
       </div>
       <div class="ml-auto">
-        <app-delete-post [postId]="post.postId" [authorId]="post.author.userId"></app-delete-post>
+        <app-delete-post [deleteComponentId]="post.postId" [postId]="post.postId" [authorId]="post.author.userId"></app-delete-post>
       </div>
     </div>
 
