theme service na odpierdol ale dziala i guess

--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -47,4 +47,7 @@
       </div>
     </div>
   </div>
+  <select (change)="themeChanges($event)" class="select select-sm">
+    <option *ngFor="let theme of themes" [value]="theme">{{ theme }}</option>
+  </select>
 </header>
