--- a/frontend/src/app/modules/profiles/components/profile/profile.component.html
+++ b/frontend/src/app/modules/profiles/components/profile/profile.component.html
@@ -11,7 +11,7 @@
       <div class="flex flex-col justify-end w-full">
         <div class="flex flex-row justify-between">
           <h1 class="text-3xl font-semibold">{{ profile.firstName + " " + profile.lastName }}</h1>
-          <button class="flex flex-row gap-2 app-btn btn-primary">
+          <button class="flex flex-row gap-2 app-btn btn-primary" routerLink="settings">
             <h2 class="">Settings</h2>
             <span class="material-symbols-outlined">settings</span>
           </button>
