--- a/frontend/src/app/modules/posts/components/delete-post/delete-post.component.html
+++ b/frontend/src/app/modules/posts/components/delete-post/delete-post.component.html
@@ -1,8 +1,11 @@
+<div *ngIf="visible" class="tooltip tooltip-bottom -top-4" data-tip="Delete">
+<span class="material-symbols-outlined relative -bottom-2" (click)="openModal('modal_'+postId)">
+delete
 
-
-<span *ngIf="visible" class="material-symbols-outlined" onclick="{{deleteComponentId}}.showModal()">delete</span>
-<dialog id="my_modal_1" class="modal">
-  <div class="{{deleteComponentId}}">
+</span>
+</div>
+<dialog id="modal_{{postId}}" class="modal">
+  <div class="modal-box">
     <h1 class="font-bold text-lg text-center" style="font-size: 22px">Do you really want to delete your post?</h1>
     <p class="py-4 text-center text-accent" style="font-size: 16px">The post data will be lost forever!</p>
     <div class="modal-action justify-between">
