Resolved All Issues

--- a/frontend/src/app/modules/posts/components/add-post/add-post.component.html
+++ b/frontend/src/app/modules/posts/components/add-post/add-post.component.html
@@ -1,17 +1,16 @@
-<div class="card w-96">
+<div class="card w-96 w-[500px] " style="padding-bottom: 10px">
   <form [formGroup]="myForm" (ngSubmit)="onFormSubmit()" class="space-y-6">
     <div>
       <div class="mt-2">
         <textarea id="content" formControlName="content" class="text-black w-full" placeholder="What's on your mind?" name="content" type="text"></textarea>
       </div>
-      <div >
-        <button [disabled]="isLoading()" class="app-btn btn-primary" style="float: right; border-radius: 25px; position: relative;">
+      <div>
+        <button [disabled]="isLoading()" class="app-btn btn-primary">
           <span *ngIf="isLoading()" class="loading loading-spinner"></span>
           <ng-container *ngIf="!isLoading()">
             Post
           </ng-container>
         </button>
-
       </div>
     </div>
   </form>
