--- a/frontend/src/app/modules/posts/components/delete-post/delete-post.component.html
+++ b/frontend/src/app/modules/posts/components/delete-post/delete-post.component.html
@@ -1,10 +1,11 @@
-<div *ngIf="visible" class="tooltip tooltip-bottom -top-4" data-tip="Delete">
+<div *ngIf="visible" class="tooltip tooltip-bottom -top-4 cursor-pointer" data-tip="Delete">
 <span class="material-symbols-outlined relative -bottom-2" (click)="openModal('modal_'+postId)">
 delete
 
 </span>
 </div>
 <dialog id="modal_{{postId}}" class="modal">
+
   <div class="modal-box">
     <h1 class="font-bold text-lg text-center" style="font-size: 22px">Do you really want to delete your post?</h1>
     <p class="py-4 text-center text-accent" style="font-size: 16px">The post data will be lost forever!</p>
@@ -12,10 +13,21 @@ delete
       <form method="dialog" class="form1">
         <button class="btn">CANCEL</button>
       </form>
-      <form (ngSubmit)="onFormSubmit()" class="form2">
-        <button class="btn btn-primary">DELETE</button>
+      <form (ngSubmit)="onFormSubmit('modal_'+postId)" class="form2">
+        <button [disabled]="isLoading()" class="btn btn-primary">
+          <span *ngIf="isLoading()" class="loading loading-spinner"></span>
+          <ng-container *ngIf="!isLoading()">
+            DELETE
+          </ng-container>
+        </button>
       </form>
-    </div>
 
+    </div>
   </div>
+  <form method="dialog" class="modal-backdrop">
+    <button>close</button>
+  </form>
+
 </dialog>
+
+
