--- a/frontend/src/app/modules/posts/components/post-list/post-list/post-list.component.html
+++ b/frontend/src/app/modules/posts/components/post-list/post-list/post-list.component.html
@@ -1,3 +1,4 @@
+<app-loading-spinner [isLoading]="isLoading()"></app-loading-spinner>
 <ul class="flex flex-col gap-4">
   <li *ngFor="let post of posts">
     <app-post [post]="post"></app-post>
