--- a/frontend/src/app/modules/posts/components/delete-post/delete-post.component.html
+++ b/frontend/src/app/modules/posts/components/delete-post/delete-post.component.html
@@ -1,7 +1,6 @@
-<div *ngIf="visible" class="tooltip tooltip-bottom -top-4 cursor-pointer" data-tip="Delete">
+<div *ngIf="visible" class="tooltip tooltip-bottom cursor-pointer -top-4" data-tip="Delete">
 <span class="material-symbols-outlined relative -bottom-2" (click)="openModal('modal_'+postId)">
 delete
-
 </span>
 </div>
 <dialog id="modal_{{postId}}" class="modal">
@@ -21,13 +20,11 @@ delete
           </ng-container>
         </button>
       </form>
-
     </div>
   </div>
-  <form method="dialog" class="modal-backdrop">
-    <button>close</button>
+  <form method="dialog" class="modal-backdrop" style="cursor: auto !important;">
+    <a (click)="closeModal('modal_'+postId)">close</a>
   </form>
-
 </dialog>
 
 
