--- a/frontend/src/app/modules/posts/components/post/post/post.component.html
+++ b/frontend/src/app/modules/posts/components/post/post/post.component.html
@@ -11,10 +11,14 @@
         <h2 class="text-xl font-semibold">{{post.author.fullName}}</h2>
         <p style="font-size: 12px" class="italic">{{formattedDate}}</p>
       </div>
-      <div class="ml-auto">
+      <div class="ml-auto" style="margin-right: -5px">
         <app-delete-post [postId]="post.postId" [authorId]="post.author.userId"></app-delete-post>
+        <span (click)="enableEditing()" class="tooltip tooltip-bottom cursor-pointer -top-4" data-tip="Edit">
+          <span class="material-symbols-outlined relative -bottom-2 text-primary" [class.text-primary]="isEdited" >edit</span>
+        </span>
       </div>
     </div>
-    <p>{{post.content}}</p>
+    <p *ngIf="!isEdited">{{post.content}}</p>
+    <app-edit-post (contentUpdated)="updateContent()" [postId]="post.postId" [currentContent]="post.content" *ngIf="isEdited"></app-edit-post>
     <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
 </div>
