--- a/frontend/src/app/modules/posts/components/edit-post/edit-post.component.html
+++ b/frontend/src/app/modules/posts/components/edit-post/edit-post.component.html
@@ -4,7 +4,7 @@
     <span class="material-symbols-outlined cursor-pointer" (click)="closeForm()">close</span>
     <span *ngIf="!isLoading()" class="material-symbols-outlined cursor-pointer" (click)="onFormSubmit()">done</span>
     <div *ngIf="isLoading()" class="w-[24px] h-[24px]">
-    <span class="loading loading-spinner loading-sm mt-[2px] ml-[2px]" (click)="onFormSubmit()"></span>
+    <span class="loading loading-spinner loading-sm mt-[2px] ml-[2px]"></span>
     </div>
   </div>
 </div>
