--- a/frontend/src/app/modules/posts/components/post/post/post.component.html
+++ b/frontend/src/app/modules/posts/components/post/post/post.component.html
@@ -21,4 +21,5 @@
     <p *ngIf="!isEdited" class="m-[1px]">{{post.content}}</p>
     <app-edit-post class="-translate-y-[24px]"(contentUpdated)="updateContent()" [postId]="post.postId" [currentContent]="post.content" *ngIf="isEdited"></app-edit-post>
     <figure ><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
+    <app-post-bottom-bar [post]="post"></app-post-bottom-bar>
 </div>
