--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -10,12 +10,12 @@
   >
     <a
       class="flex flex-row gap-2 transition duration-300 min-w-[4rem] justify-center hover:scale-110"
-      routerLink="/home"
+      routerLink="/posts"
     >
       <span class="material-symbols-outlined" style="font-size: 32px">
         home
       </span>
-      <h2 class="my-auto hidden min-[320px]:block">Home</h2>
+      <h2 class="my-auto hidden min-[320px]:block" >Home</h2>
     </a>
     <a
       class="flex flex-row gap-2 transition duration-300 min-w-[4rem] justify-center hover:scale-110"
