--- a/frontend/src/app/modules/profiles/components/user-profile-settings-page/user-profile-settings-page.component.html
+++ b/frontend/src/app/modules/profiles/components/user-profile-settings-page/user-profile-settings-page.component.html
@@ -1,1 +1,1 @@
-<app-user-profile-edit-form [profile]="profile$ | async" [isLoading]="isLoading()"></app-user-profile-edit-form>
+<app-user-profile-edit-form [profile]="(profile$ | async)" [isLoading]="isLoading()"></app-user-profile-edit-form>
