--- a/frontend/src/app/modules/posts/components/comment/comment.component.html
+++ b/frontend/src/app/modules/posts/components/comment/comment.component.html
@@ -14,6 +14,6 @@
 
 
   </div>
-  <p class="m-[1px] pl-1">{{comment.content}}</p>
+  <p class="m-[1px] pl-1 text-sm">{{comment.content}}</p>
 
 </div>
